--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,12 @@
+
+# Really Simple SSL
+Header always set Strict-Transport-Security: "max-age=31536000" env=HTTPS 
+Header always set X-XSS-Protection "0"
+Header always set Referrer-Policy "strict-origin-when-cross-origin"
+Header always set X-Frame-Options: "SAMEORIGIN"
+Header always set Permissions-Policy: "" 
+# End Really Simple SSL
+
 # BEGIN WordPress
 <IfModule mod_rewrite.c>
 RewriteEngine On
